# gauche-libsoc

./: .gitignore  DIST  Makefile.in  README.md  configure  configure.ac  example.scm  gauche_libsoc.c  gauche_libsoc.h  gauche_libsoclib.stub  test.scm
ext/: libsoc.scm
